Update: .add class to .social_media class Remove: unnecessary switch statement in script.js

--- a/style.css
+++ b/style.css
@@ -36,14 +36,14 @@ h1 {
   margin-top: 2rem;
   padding: 1rem;
 }
-.add {
+.social_media {
   text-align: center;
 }
-.add h2 {
+.social_media h2 {
   font-size: 2rem;
   padding: 0.5rem;
 }
-.add a {
+.social_media a {
   font-size: 2rem;
   padding: 0.5rem;
   color: black;
